95) kernel: net: pptp: fix illegal memory access caused by multiple bind()s.<br>
96) kernel: net: netfilter: xt_TCPMSS: handle CHECKSUM_COMPLETE in tcpmss_tg6().<br>
97) kernel: net: sched: drr: check for NULL pointer in drr_dequeue.<br>
98) kernel: net: inet: frag: always orphan skbs inside ip_defrag().<br>
99) kernel: net: qmi_wwan: add WeTelecom-WPD600N.<br>
100) kernel: net: qmi_wwan: add SIMCom 7230E.<br>
101) kernel: net: core: revert net: fix__netdev_update_features return and add comment.<br>
102) kernel: net: ipv6: addrlabel: fix ip6addrlbl_get().<br>
103) kernel: net: ipv6: honor ifindex in case we receive ll addresses in router advertisements.<br>
104) kernel: net: ipv6: update skb->csum when CE mark is propagated.<br>
105) kernel: net: ipv6: always add flag an address that failed DAD with DADFAILED.<br>
106) kernel: net: ipv6: keep existing flags when setting IFA_F_OPTIMISTIC.<br>
107) kernel: net: ipv6: fib6: install fib6 ops in the last step.<br>
108) kernel: net: ipv6: fix the incorrect return value of throw route.<br>
109) kernel: net: ipv6: udp: use sticky pktinfo egress ifindex on connect() (RFC 3542 section 6.7).<br>
110) kernel: net: ipv6: proc: fix error handling.<br>
111) kernel: net: ipv4: no CHECKSUM_PARTIAL on MSG_MORE corked sockets.<br>
112) kernel: net: ipv4: revert 'ipv4/icmp: redirect messages can use the ingress daddr as source'.<br>
113) kernel: proc: return -ENOMEM when inode allocation failed.<br>
114) kernel: proc: no need to initialize proc_inode->fd in proc_get_inode().<br>
115) kernel: proc: check vma->vm_file before dereferencing.<br>
116) kernel: proc: don't show nonexistent capabilities.<br>
117) kernel: proc: fix inconsistent lock state.<br>
118) kernel: proc: allow proc_free_inum to be called from any context.<br>
119) kernel: proc: make proc_fd_permission() thread-friendly.<br>
120) kernel: proc: fix the potential use-after-free in first_tid().<br>
<br>
<br>
<br>